Fixed scrollbar issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -22,10 +22,11 @@
 
 html {
     scroll-behavior: smooth;
+    overflow: overlay;
 }
 
 html::-webkit-scrollbar {
-    width: 6px;
+    width: 5px;
 }
 
 html::-webkit-scrollbar-thumb {
@@ -34,7 +35,7 @@ html::-webkit-scrollbar-thumb {
 }
 
 html::-webkit-scrollbar-track {
-    background: gray;
+    background: transparent;
 }
 
 body {
